--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Intern</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<body>
-    
-</body>
-</html>
+<div class="card text-white bg-primary mb-3" style="max-width: 18rem;">
+    <div class="card-header">
+        <h2 class="card-title">NAME</h2>
+        <h3 class="card-title"><i class="fas fa-graduation-cap"></i>ROLE</h3>
+    </div>
+    <div class="card-body">
+      <ul class="list">
+          <li class="list-item">EMPLOYEE ID</li>
+          <li class="list-item">EMAIL: <a href= "email"></a></li>
+          <li class="list-item">PHONE</li>
+      </ul>
+    </div>
+  </div>
