set employee constructor

--- a/templates/main.html
+++ b/templates/main.html
@@ -8,6 +8,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-image">
+            <div class="container-fluid">
+              <span class="navbar-text-white justifiy-content-center align-items-center h-100">
+                TEAM WORKFLOW
+              </span>
+            </div>
+          </nav>
+
+    </div>
     
 </body>
 </html>
