--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,13 +1,13 @@
-<div class="card text-white bg-dark mb-3" style="max-width: 18rem;">
-    <div class="card-header">
-        <h2 class="card-title">NAME</h2>
-        <h3 class="card-title"><i class="fas fa-dice-d20"></i>ROLE</h3>
-    </div>
-    <div class="card-body">
-      <ul class="list">
-          <li class="list-item">EMPLOYEE ID</li>
-          <li class="list-item">EMAIL: <a href= "email"></a></li>
-          <li class="list-item">PHONE</li>
-      </ul>
-    </div>
+<div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">{{ name }}</h2>
+      <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
   </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: {{ id }}</li>
+          <li class="list-group-item">Email: <a href="mailto:{{ email }}">{{ email }}</a></li>
+          <li class="list-group-item">Office number: {{ officeNumber }}</li>
+      </ul>
+  </div>
+</div>
